Avoid hang on rapid WebXR VR exit / re-entry

The "GpuFence" and "SharedBuffer" WebXR render modes use a frame-separating GpuFence,
the Renderer is supposed to do a server wait for that before the second and following
frames.

The "is this the first frame" status is tracked by xr_frame_transport, but the property
wasn't being cleared correctly when exiting and re-entering VR, with the effect that
it could end up erroneously waiting for a separating fence for the first frame.

BUG=855722

Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I5508f184e4687d1b0a20d3da543cbbaf2e8535c1
Reviewed-on: https://chromium-review.googlesource.com/1115421
Reviewed-by: Ian Vollick <vollick@chromium.org>
Commit-Queue: Klaus Weidner <klausw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570841}
Former-commit-id: c5eab600eaf6bfc73996964a7254ece8bf5b41d5